Fixed invisible content.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -86,6 +86,17 @@ html {
     font-family: Arial, sans-serif;
 }
 
+// style.scss
+
+/* Définir les styles généraux de la page */
+body,
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: Arial, sans-serif;
+}
+
 /* Le loader : centré à l'écran */
 .loader {
     position: fixed;
@@ -142,7 +153,8 @@ html {
 
 /* Le contenu de la page, caché au départ */
 .content {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
     animation: fadeInContent 3s ease-in 3s forwards;
     /* Affichage du contenu après le délai du loader */
 }
@@ -151,11 +163,12 @@ html {
 @keyframes fadeInContent {
     0% {
         opacity: 0;
+        visibility: hidden;
     }
 
     100% {
         opacity: 1;
-        display: block;
+        visibility: visible;
     }
 }
 
